refactor product service entities and services